# data-engineering-analytics-mvp

./: .gitignore  README.md  etl.py  pyproject.toml
app/: app.py
backend/: db.py  ingest.py  models.py  pipeline.py
backend/sql/: 010_fct_events.sql  020_metrics.sql  030_daily_counts.sql  raw_events.sql
data/: sales.csv  sample.csv
scripts/: verify.ps1
tests/: test_ingest.py  test_metrics.py  test_smoke_app.py
