[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "data-engineering-analytics-mvp"
version = "0.1.0"
description = "CSV to DuckDB to Streamlit MVP"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=0.10.0",
  "streamlit>=1.32.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
