[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "data-engineering-analytics-mvp"
version = "0.1.0"
description = "CSV to DuckDB to Streamlit MVP"
requires-python = ">=3.11"
dependencies = [
  "duckdb==1.4.3",
  "streamlit==1.52.2",
  "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = ["pytest==9.0.2"]
